--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+asgiref==3.4.1
 certifi==2018.10.15
 chardet==3.0.4
-Django==2.1
-django-crispy-forms==1.7.2
+Django==3.2.6
+django-crispy-forms==1.12.0
 idna==2.7
-Pillow==5.2.0
+Pillow==8.3.1
 pytz==2018.5
 requests==2.19.1
+sqlparse==0.4.1
 urllib3==1.23
